# OneDMin

./: .gitignore  CMakeLists.txt  README.md  build.sh  environment.yml  meta.yaml  安装手册.md
.circleci/: config.yml
example/CH4_N2/serial/gaussian/: Test.FChk  fort.7  sp.chk  zero.ene
example/CH4_N2/serial/molpro/1_Old/: zero.ene
example/CH4_N2/serial/molpro/3_SpinMethod2/: qc.in
examples/CH4_N2/exp6/SpinMethod1/: zero.ene
examples/CH4_N2/gaussian/: bath.xyz  g.x
examples/CH4_N2/molpro/: qc.in
examples/CH4_N2/serial/gaussian/: qc.in
examples/CH4_N2/serial/molpro/3_SpinMethod2/: zero.ene
examples/ch4_he/exp6/SpinMethod1/: min_geoms.out
examples/ch4_he/exp6/SpinMethod2/: lj.out  min_geoms.out  zero.ene
examples/ch4_he/gaussian/: Test.FChk  lj.out  min_geoms.out  qc.inp  qc.mol  qc.out  qc.x  zero.ene
examples/ch4_he/molpro/: bath.xyz  lj.out  min_geoms.out  qc.inp  qc.out  qc.x  zero.ene
src/: dd-gaussian.f  dd-molpro.f  exp6.f  old_spin.f  onedmin.f  spin.f
